src/test/deca/context/invalid/created/Objet/Passe_3/WrongTypeInMethodCall.deca
// Description:
//    teste l'appel d'une méthode avec un mauvais type en argument
// Resultats:
//    WrongTypeInMethodCall.deca:14:16: Error: Illegal RValue type, got boolean, expected float

class A {
    int m(float a, boolean b) {
        return 3;
    }
}

{
    A a = new A();
    int x = a.m(true, false);
}